Fix Header Icons
Fix the header icons from being too large.

--- a/css/main.css
+++ b/css/main.css
@@ -70,12 +70,12 @@ header {
 
 #search {
     margin-right: 20px;
-    width: 35px;
+    width: 30px;
     cursor: pointer;
 }
 
 #cart {
-    width: 35px;
+    width: 30px;
     cursor: pointer;
 }
 
